<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output_screen"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/digital"
        android:gravity="center_vertical"
        android:letterSpacing="0.1"
        android:textColor="@color/textColor"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/digital"
        android:gravity="center_vertical"
        android:letterSpacing="0.1"
        android:textColor="@color/textColor"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/output_screen" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/clear"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_lightgrey"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="42sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/modulus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/modulus"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_lightgrey"
                android:text="@string/modulus"
                android:textColor="@color/black"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/multiply"
                app:layout_constraintStart_toEndOf="@id/clear"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_lightgrey"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divide"
                app:layout_constraintStart_toEndOf="@id/modulus"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="x" />

            <Button
                android:id="@+id/divide"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_orange"
                android:text="@string/divide"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/multiply"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

            <Button
                android:id="@+id/seven"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/seven"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/eight"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/eight"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nine"
                app:layout_constraintStart_toEndOf="@id/seven"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/nine"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/nine"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/plus"
                app:layout_constraintStart_toEndOf="@id/eight"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/plus"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_orange"
                android:text="@string/plus"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nine"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <Button
                android:id="@+id/four"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/four"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/five"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="4" />

            <Button
                android:id="@+id/five"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/five"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/six"
                app:layout_constraintStart_toEndOf="@id/four"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/six"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/six"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minus"
                app:layout_constraintStart_toEndOf="@id/five"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/minus"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_orange"
                android:text="@string/minus"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/six"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
            app:layout_constraintEnd_toStartOf="@+id/equal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <Button
                android:id="@+id/one"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/one"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/two"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/two"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/three"
                app:layout_constraintStart_toEndOf="@id/one"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/three"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:contentDescription="@string/three"
                android:text="@string/three"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/two"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/equal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <Button
                android:id="@+id/zero"
                android:layout_width="195dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_zero"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/dot"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_darkgrey"
                android:text="@string/dot"
                android:textColor="@color/textColor"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/zero"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/equal"
            android:layout_width="90dp"
            android:layout_height="179dp"
            android:background="@drawable/bg_equal"
            android:text="@string/equal"
            android:textColor="@color/textColor"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
